syntax = "proto3";

// package name
option go_package = "github.com/itzaddddd/game-shop";

// structure
message AccessTokenSearchReq {
  string accessToken = 1;
}

message AccessTokenSearchRes {
  bool isValid = 1;
}

message RolesCountReq {}

message RolesCountRes {
  int64 count = 1;
}

// method
service AuthGrpcService {
  rpc AccessTokenSearch(AccessTokenSearchReq) returns (AccessTokenSearchRes);
  rpc RolesCount(RolesCountReq) returns (RolesCountRes);
}